update api create cuspackage-custasks, edit dsn mysql loc to UTC, prepare for create appointment, invoice, record in cmd create customized package and task
