# docs/swagger.yaml
@@ -25,8 +25,6 @@ definitions:
     properties:
       client-note:
         type: string
-      cuspackage-id:
-        type: string
       est-duration:
         type: integer
       svctask-id:
@@ -36,7 +34,6 @@ definitions:
       total-unit:
         type: integer
     required:
-    - cuspackage-id
     - svctask-id
     type: object
   cuspackagecommands.ReqCreatePackageTaskDTO:
@@ -45,6 +42,8 @@ definitions:
         items:
           type: string
         type: array
+      nurse-id:
+        type: string
       package-info:
         $ref: '#/definitions/cuspackagecommands.CreateCustomizedPackageDTO'
       task-infos:
